# sdk-nrf

./: .clang-format  .gitignore
applications/connectivity_bridge_52840/: prj.conf  prj.nrfx.conf  sample.yaml
applications/connectivity_bridge_dk/: prj.conf  prj.nrfx.conf  sample.yaml
applications/connectivity_bridge_g/: sample.yaml
applications/connectivity_bridge_g/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf9160dk_nrf52840.conf  nrf9160dk_nrf52840.overlay  thingy91_nrf52840.conf
applications/connectivity_bridge_protec3/: prj.conf  prj.nrfx.conf
applications/connectivity_bridge_thingy/: CMakeLists.txt  prj.conf  prj.debug.conf
applications/protec3/: sample.yaml
applications/protec3/cert/: 1df19e7fd5.private
boards/arm/protec3_nrf52840/: Kconfig  Kconfig.board  Kconfig.defconfig  protec3_nrf52840-pinctrl.dtsi  protec3_nrf52840.dts  protec3_nrf52840.yaml  protec3_nrf52840_defconfig
boards/arm/protec3_nrf9160/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  adp5360_init.c  board_nonsecure.c  board_secure.c  protec3_nrf9160.dts  protec3_nrf9160.yaml  protec3_nrf9160_common-pinctrl.dtsi  protec3_nrf9160_common.dts  protec3_nrf9160_ns.dts  (+4 more)
include/: adp536x-mod.h
lib/adp536x/: adp536x.c
samples/nrf9160/protec3_old/: 1df19e7fd5.cert.pem  1df19e7fd5.private.key  CMakeLists.txt  prj.conf  sample.yaml  thingy91_cred.csv
samples/nrf9160/protec3_old/cert/: 1df19e7fd5.cert  Debian-Root
samples/nrf9160/protec3_old/src/: api-gateway.c  cognito.c  main.c  protec3.h
samples/nrf9160/protec3_old/src/tls_config/: user-tls.conf
(+126 files in other folders)
